# dc_bot

./: Cargo.toml  plan
src/: main.rs
src/commands/: mod.rs
src/commands/general/: config.rs  disable.rs  enable.rs  help.rs  info.rs  mod.rs  permissions.rs  ping.rs
src/commands/information/: avatar_info.rs  banner_info.rs  channel_info.rs  emoji_info.rs  guild_banner_info.rs  guild_channel_count.rs  guild_icon_info.rs  guild_info.rs  guild_member_count.rs  guild_splash_info.rs  role_info.rs  sticker_info.rs  sticker_pack_info.rs  user_info.rs
src/commands/join_roles/: join_roles.rs
src/commands/logging/: log.rs
src/commands/messages/: send_message.rs  send_template.rs
src/commands/moderation/: ban.rs  block_appeal_user.rs  case_close.rs  case_delete.rs  case_info.rs  case_list.rs  case_split.rs  case_update.rs  kick.rs  link_case_view.rs  lock.rs  lock_all.rs  mass_ban.rs  mass_kick.rs  mass_mute.rs  mass_warn.rs  mod.rs  mute.rs  name_ban.rs  name_kick.rs  name_mute.rs  name_warn.rs  prune.rs  purge.rs  report.rs  report_blacklist.rs  report_ignore_all.rs  report_send_missing.rs  restore_appeal_message.rs  send_to_appeal.rs  set_proof.rs  set_slow_mode.rs  time_ban.rs  time_kick.rs  time_mute.rs  time_warn.rs  unban.rs  unblock_appeal_user.rs  unlock.rs  unlock_all.rs  (+5 more)
src/commands/reaction_roles/: reaction_roles.rs  reaction_roles_config.rs
src/commands/social_notifications/: mod.rs  twitch.rs  youtube.rs
src/commands/valorant/: host.rs  link.rs  mod.rs  (+3 more)
src/data/: mod.rs  youtube_schema.rs
src/handlers/: command_handler.rs  event_handler.rs
(+8 files in other folders)
