[package]
name = "dc_bot"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"]}
poise = "0.6.1"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# songbird = "0.5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
feed-rs = "1.5"
urlencoding = "2"
chrono = "0.4"
bincode = { version = "2.0.1", features = ["serde"] }
zstd = "0.13"
sled = "0.34"
